--- a/Database/SQLGen.ipynb
+++ b/Database/SQLGen.ipynb
@@ -92,15 +92,15 @@
     "#CREATES TABLE TO RECORD CLASSES TAKEN BY STUDENTS\n",
     "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS ClassesTaken(UID INTEGER, \n",
     "                                                            CID INTEGER, \n",
-    "                                                            Semester TINYTEXT,\n",
-    "                                                            Primary Key(UID, CID, Semester), \n",
+    "                                                            Semester INTEGER,\n",
+    "                                                            Primary Key(UID, CID), \n",
     "                                                            Foreign Key(UID) References User(UID), \n",
     "                                                            Foreign Key(CID) References Class(CID))\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS ClassesToTake(UID INTEGER, \n",
     "                                                            CID INTEGER, \n",
-    "                                                            Semester TINYTEXT,\n",
-    "                                                            Primary Key(UID, CID, Semester), \n",
+    "                                                            Semester INTEGER,\n",
+    "                                                            Primary Key(UID, CID), \n",
     "                                                            Foreign Key(UID) References User(UID), \n",
     "                                                            Foreign Key(CID) References Class(CID))\"\"\")\n",
     "\n",
@@ -408,21 +408,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
